# special-octo-umbrella

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.yaml
scripts/: create_wallet.py  test_auth.py
src/btc_bot/: __init__.py  __main__.py  main.py
src/btc_bot/analysis/: indicators.py  scoring.py
src/btc_bot/api/binance/: client.py
src/btc_bot/api/polymarket/: auth.py  client.py  markets.py
src/btc_bot/config/: constants.py  settings.py
src/btc_bot/scheduler/: job_scheduler.py
src/btc_bot/trading/: executor.py  paper_trader.py
src/btc_bot/utils/: logging.py
src/btc_bot/web/: __init__.py  app.py
tests/: conftest.py  test_indicators.py  test_paper_trader.py  test_scoring.py
